@@ -15,6 +15,9 @@ Version 1.0.9 (February xxh 2013)
 - Fixed: Now able to clear lightlog for security1 devices
 - Implemented temp_hum Rubicson/IW008T/TX95
 - Implemented Latest RFXCOM SDK
+- Changed: Manual Add light switchtypes are now complete
+- Implemented: Dimmer change now directly updates the user interface status
+- Fixed: Mobile desktop, blind open icon
 
 Version 1.0.8 (February 3th 2013)
 - Fixed Hardware Enabled/Disabled option
